@@ -1,0 +1,56 @@
+#!/bin/sh
+
+# assume the sources are up one level
+cd ..
+
+# should be a clean version of the Nethack sources
+ref=${1:-nethack-3.3.1}
+# your cvs working directory, with your changes
+work=${2:-nethack}
+
+[ -d $ref ] || { echo $ref/ is missing >&2; exit 1; }
+[ -d $work ] || { echo $work/ is missing >&2; exit 1; }
+
+# the patch is distributed under a modified BSD license
+cat <<EOF
+Redistribution and use in source and binary forms, with or without modification, are permitted
+provided that the following conditions are met:
+
+ 1. Redistributions of source code must retain the above copyright notice, this list of conditions
+    and the following disclaimer.
+ 2. Redistributions in binary form must reproduce the above copyright notice, this list of
+    conditions and the following disclaimer in the documentation and/or other materials provided
+    with the distribution.
+ 3. The name of the author may not be used to endorse or promote products derived from this
+    software without specific prior written permission.
+
+THIS SOFTWARE IS PROVIDED BY THE AUTHOR \`\`AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES,
+INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
+PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT,
+INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
+LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+EOF
+
+# generate the diffs 
+for n in `cat <<EOF
+include/config.h
+include/winlisp.h
+src/windows.c
+sys/unix/Makefile.src
+util/makedefs.c
+win/lisp/ChangeLog
+win/lisp/TODO
+win/lisp/winlisp.c
+EOF
+`; do
+  s=$ref/$n
+  if [ ! -f $s ]; then s=/dev/null; fi
+  echo diff -u $s $work/$n >&2
+  diff -u $s $work/$n
+done
+
+# diff returns error code when there are changes
+true
